--- a/mobile/index.html
+++ b/mobile/index.html
@@ -20,7 +20,7 @@
 		<!-- 引入头部 -->
 		<div id="header_box"></div>
 		
-		<!--轮播 start-->
+		<!--轮播图 start-->
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
 			  <div class="swiper-slide"><img src="image/bg-news.jpg" alt=""></div>
