管理员查询用户评价功能

--- a/pc/adminbackground/adminPage.html
+++ b/pc/adminbackground/adminPage.html
@@ -81,6 +81,11 @@
 									<cite>订单信息</cite></a>
 							</li>
 							<li>
+								<a onclick="xadmin.add_tab('评价信息','user-judge.html',true)">
+									<i class="iconfont">&#xe6a7;</i>
+									<cite>评价信息</cite></a>
+							</li>
+							<li>
 								<a onclick="xadmin.add_tab('用户信息','user-info.html',true)">
 									<i class="iconfont">&#xe6a7;</i>
 									<cite>用户信息</cite></a>
